# quotapilot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: .gitkeep  provider_limits.yaml  provider_models.yaml
docs/: project-description.md
src/gateway/: __init__.py  main.py  schemas.py
src/providers/: __init__.py  base.py  base_openai.py  cerebras.py  mistral.py
src/router/: __init__.py  core.py  registry.py  retry.py
src/state/: __init__.py  budget.py  models.py  mongo.py
src/tools/: __init__.py
tests/: test_budget.py  test_cerebras_adapter.py  test_gateway.py  test_mistral_adapter.py  test_retry.py  test_router.py  test_schemas.py
